[gd_scene load_steps=24 format=3 uid="uid://1fp6puml8obn"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_faej6"]
[ext_resource type="Texture2D" uid="uid://cic2mruxg4w4b" path="res://art/SpriteSheet.png" id="2_e8q51"]
[ext_resource type="PackedScene" uid="uid://cdovhthnlgfwt" path="res://Weapons/katana_weapon.tscn" id="3_88dvi"]
[ext_resource type="AudioStream" uid="uid://bdnjf2qme2ek" path="res://Sounds/PowerUp1.wav" id="4_qj3ep"]
[ext_resource type="AudioStream" uid="uid://bi0x4nc87o5s6" path="res://Sounds/Sword.wav" id="5_4gv5o"]
[ext_resource type="AudioStream" uid="uid://qj1c8xmwxkbj" path="res://Sounds/PickUpWeapon.wav" id="6_iqbdh"]
[ext_resource type="AudioStream" uid="uid://k6iecpd1ks5j" path="res://Sounds/Damaged.wav" id="7_o5jlx"]

[sub_resource type="Animation" id="Animation_4lyt0"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, -9), Vector2(8, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.48787e-16]
}

[sub_resource type="Animation" id="Animation_p1612"]
resource_name = "atackDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, -8), Vector2(2.08165e-12, -4), Vector2(2.08165e-12, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.48787e-16, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_3xukd"]
resource_name = "atackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-7, -12), Vector2(-9, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, -6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(2, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_8hje3"]
resource_name = "atackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, -12), Vector2(10, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_d5hx3"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_br7cs"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_i1eed"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_wgx4o"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_83v07"]
resource_name = "atackUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -16), Vector2(2.08165e-12, -20), Vector2(2.08165e-12, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.0944, 3.48787e-16, 2.0944]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0gwh2"]
_data = {
"RESET": SubResource("Animation_4lyt0"),
"atackDown": SubResource("Animation_p1612"),
"atackLeft": SubResource("Animation_3xukd"),
"atackRight": SubResource("Animation_8hje3"),
"atackUp": SubResource("Animation_83v07"),
"walkDown": SubResource("Animation_d5hx3"),
"walkLeft": SubResource("Animation_br7cs"),
"walkRight": SubResource("Animation_i1eed"),
"walkUp": SubResource("Animation_wgx4o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m50sv"]
size = Vector2(14, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_kxk1h"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_xcpyr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.984314, 0.878431, 0.878431, 0)]
}

[sub_resource type="Animation" id="Animation_qnn8i"]
resource_name = "healed"
length = 0.3
loop_mode = 2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.870588, 1, 0, 0.733333), Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_apawi"]
resource_name = "hurt"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.870588, 0.0941176, 0.0941176, 0.733333), Color(1, 1, 1, 0.733333)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5r6mb"]
_data = {
"RESET": SubResource("Animation_xcpyr"),
"healed": SubResource("Animation_qnn8i"),
"hurt": SubResource("Animation_apawi")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_faej6")
knockbackPower = 1000

[node name="timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="healTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("2_e8q51")
offset = Vector2(2.08165e-12, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -19.0
offset_top = -27.0
offset_right = 21.0
offset_bottom = 13.0
color = Color(0.984314, 0.878431, 0.878431, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0gwh2")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_m50sv")

[node name="hitBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_kxk1h")

[node name="EffectAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5r6mb")
}

[node name="Weapon" type="Node2D" parent="."]
position = Vector2(8, -9)

[node name="Katana-Weapon" parent="Weapon" instance=ExtResource("3_88dvi")]

[node name="HealASP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qj3ep")

[node name="AttackASP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4gv5o")

[node name="WeaponPickupASP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_iqbdh")

[node name="HitASP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_o5jlx")

[connection signal="area_entered" from="hitBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_shape_entered" from="hitBox" to="." method="_on_hit_box_area_shape_entered"]
